[workspace]
resolver = "3"
members = [
    "packages/tcads",
    "packages/tcads-core",
    "packages/tcads-client",
    "packages/tcads-server",
]

[workspace.package]
authors = ["Goodwill Mzumala <fisothemes@egmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/fisothemes/tcads-rs"

[workspace.dependencies]
tcads-core = { path = "packages/tcads-core" }
thiserror = "2"
encoding_rs = "0.8"